Issue #2020 - Input cell contrast - Zebra Stripe Removal - Groups - Reduce cell padding - Reduce overall widths of BUY/SELL input fields and labels - Find markets is missing in tiny and small screen

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -707,6 +707,10 @@
             background-color: $bg-color !important;
         }
     }
+    // Sticky Order-Row
+    div.sticky-table-row.order-row:hover {
+        background-color: lighten($bg-color, 4%);
+    }
     // block-list
     .block-list {
         color: $primary-text-color;
@@ -1418,7 +1422,7 @@
             background-color: $panel-bg-color !important;
             border-bottom: 1px solid grey !important;
             border-top: 1px solid grey !important;
-            padding: 10px 0 !important;
+            padding: 7px 0 !important;
         }
     }
     .sticky-table .sticky-table-column,
@@ -1455,11 +1459,11 @@
             }
         }
     }
-    .order-table {
-        > tbody > tr:nth-of-type(even) {
-            background-color: $row-accent-color;
-        }
-    }
+    // .order-table {
+    //     > tbody > tr:nth-of-type(even) {
+    //         background-color: $row-accent-color;
+    //     }
+    // }
     .mymarkets-header {
         background-color: $header-color;
     }
@@ -1537,9 +1541,9 @@
         cursor: pointer;
     }
 
-    .table > tbody > tr:nth-of-type(even) {
-        background-color: lighten($bg-color, 4%);
-    }
+    // .table > tbody > tr:nth-of-type(even) {
+    //     background-color: lighten($bg-color, 4%);
+    // }
     // bottom stats
     .bucket-option {
         @include button-focus($secondary-text-color, $panel-bg-color, 0);
@@ -2404,6 +2408,21 @@
 
     .modal--transaction-confirm {
         zindex: 10000; // make transaction confirm modal above another modals
+    }
+
+    /* Ant Design Hacks */
+    .ant-select-arrow {
+        color: $light-text-color !important;
+    }
+
+    .ant-select-selection-selected-value {
+        color: $light-text-color !important;
+    }
+
+    .ant-input {
+        border-left: 1px solid $super-light-panel-bg-color !important;
+        border-top: 1px solid $super-light-panel-bg-color !important;
+        border-bottom: 1px solid $super-light-panel-bg-color !important;
     }
 }
 .rc-time-picker-panel {
